# Quorum

./: Makefile.am  README  README.md  configure.ac  header-license  local.mk  quorum_easy_install  quorum_easy_install.in  test.cc
data/: adapter.fa
include/: divisor64.hpp  misc.hpp
include/jflib/: atomic_field.hpp  circular_buffer.hpp  compare_and_swap.hpp  multiplexed_io.hpp  pool.hpp
paper/: .gitignore  bmc_article.bib  bmc_article.bst  bmc_article.tex
poster_CSH_2012/: Poster.sla
src/: combine_jf_dbs.cc  combine_jf_dbs.hpp  combine_jf_dbs.yaggo  create_database.cc  create_database_cmdline.yaggo  err_log.hpp  error_correct_reads.cc  error_correct_reads.hpp  error_correct_reads.yaggo  error_correct_reads_cmdline.hpp  error_correct_reads_cmdline.yaggo  histo_mer_database.cc  kmer.cc  kmer.hpp  mer_database.hpp  merge_mate_pairs_cmdline.yaggo  query_mer_database.cc  quorum.in  run_quorum.sh  split_mate_pairs_cmdline.yaggo  verbose_log.hpp  yaggo.cpp
unit_tests/: test_mer_database.cc  test_speed_calc.cc
